--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -2,7 +2,7 @@
     "name": "react-forms-store",
     "version": "1.0.0",
     "description": "A package for building React forms using external storages",
-    "main": "src/index.ts",
+    "main": "src/index.tsx",
     "scripts": {
         "start": "esbuild src/index.tsx --bundle --outfile=dist/bundle.js --serve",
         "build": "esbuild src/index.tsx --bundle --outfile=dist/bundle.js",
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/use-sync-external-store": "^0.0.4",
         "esbuild": "^0.14.0",
         "jest": "^27.0.0",
         "react": "^17.0.0",
