--- a/packages/react-forms-store-ux/package.json
+++ b/packages/react-forms-store-ux/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/Jme797/react-forms-store-ux#readme",
   "dependencies": {
     "@mui/icons-material": "^6.4.3",
+    "@types/luxon": "^3.4.2",
     "@types/use-sync-external-store": "^0.0.4",
     "luxon": "^3.5.0",
     "react-forms-store": "workspace:*",
