--- a/packages/react-forms-store-ux/package.json
+++ b/packages/react-forms-store-ux/package.json
@@ -26,6 +26,7 @@
     "homepage": "https://github.com/Jme797/react-forms-store-ux#readme",
     "dependencies": {
         "@mui/icons-material": "^6.4.3",
+        "@mui/system": "^6.4.7",
         "@types/luxon": "^3.4.2",
         "@types/use-sync-external-store": "^0.0.4",
         "luxon": "^3.5.0",
@@ -36,7 +37,7 @@
     "peerDependencies": {
         "@emotion/react": "^11.0.0",
         "@emotion/styled": "^11.0.0",
-        "@mui/lab": "6.0.0-beta.27",
+        "@mui/lab": "^6.0.0-beta.27",
         "@mui/material": "^6.1.7",
         "@mui/x-date-pickers": "7.27.0",
         "react": "^17.0.0",
