Start adding tests for the Field interfaces.

--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -25,6 +25,7 @@
     },
     "homepage": "https://github.com/Jme797/react-forms-store#readme",
     "dependencies": {
+        "@types/jest": "^29.5.14",
         "uuid": "^11.0.5"
     },
     "peerDependencies": {
