--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -25,7 +25,6 @@
     },
     "homepage": "https://github.com/Jme797/react-forms-store#readme",
     "dependencies": {
-        "@types/jest": "^29.5.14",
         "uuid": "^11.0.5"
     },
     "peerDependencies": {
@@ -33,13 +32,15 @@
         "react-dom": "^17.0.0"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.14",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/use-sync-external-store": "^0.0.4",
         "esbuild": "^0.14.0",
-        "jest": "^27.0.0",
+        "jest": "^29.0.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
+        "ts-jest": "^29.2.6",
         "typescript": "^4.0.0",
         "use-sync-external-store": "^1.4.0"
     },
