--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -4,9 +4,9 @@
     "description": "A package for building React forms using external storages",
     "main": "src/index.tsx",
     "scripts": {
-        "start": "esbuild src/index.tsx --bundle --outfile=dist/bundle.js --serve",
-        "build": "esbuild src/index.tsx --bundle --outfile=dist/bundle.js",
-        "test": "jest"
+        "build": "node build.js",
+        "test": "jest",
+        "prepack": "yarn build"
     },
     "repository": {
         "type": "git",
