--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   },
   "scripts": {
     "storybook": "yarn workspace react-forms-dev storybook",
-    "format": "yarn prettier --write packages | grep -v unchanged"
+    "format": "yarn prettier --write packages | grep -v unchanged",
+    "lint": "eslint"
   },
   "packageManager": "yarn@4.6.0",
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-plugin-i18next": "^6.1.1",
+    "eslint-plugin-jest": "^28.11.0",
     "inquirer": "^12.4.3",
     "merge-prettier-plugins": "^1.0.3",
     "prettier": "^3.5.1",
