--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.2",
     "description": "A package for building React forms using external storages",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
-        "build": "node scripts/build.js",
+        "build": "rm -rf dist && tsc",
         "test": "jest",
         "i18n": "i18next && node scripts/gen-i18n-configuration.mjs",
         "prepack": "yarn build"
@@ -35,7 +36,7 @@
         "i18next-parser": "^9.3.0",
         "jest": "^29.0.0",
         "ts-jest": "^29.2.6",
-        "typescript": "^4.0.0"
+        "typescript": "^5.0.0"
     },
     "packageManager": "yarn@4.5.1"
 }
