--- a/packages/react-forms-store/tsconfig.json
+++ b/packages/react-forms-store/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "CommonJS",
         "declaration": true,
         "declarationMap": true,
-        "emitDeclarationOnly": true,
+        "emitDeclarationOnly": false,
         "outDir": "./dist",
         "strict": true,
         "esModuleInterop": true,
