--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,8 @@ yarnPath: .yarn/releases/yarn-4.6.0.cjs
 nodeLinker: node-modules
 
 npmAuthToken: ${NPM_AUTH_TOKEN-}
+
+supportedArchitectures:
+  os:
+    - linux
+    - win32
