Remove dependency on uuid.

--- a/packages/react-forms-store/package.json
+++ b/packages/react-forms-store/package.json
@@ -27,8 +27,7 @@
     },
     "homepage": "https://github.com/Jme797/react-forms-store#readme",
     "dependencies": {
-        "i18next": "^24.2.2",
-        "uuid": "^11.0.5"
+        "i18next": "^24.2.2"
     },
     "devDependencies": {
         "@types/jest": "^29.5.14",
